--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ td {
     font-size: 10px;
     line-height: 20px;
     text-align: center;
+    height: 50px;
 
     border: 1.5px solid #E5E6E6;
 }
@@ -185,6 +186,7 @@ td {
 
 .top {
     border-top: none;
+    line-height: 12px;
 }
 
 .bold {
@@ -486,3 +488,6 @@ img {
     color: #FF0000;
 }
 
+.kakao:hover {
+    cursor: pointer;
+}
